--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="pref_title_display_name">Display name</string>
     <string name="pref_default_display_name">John Smith</string>
 
+
     <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
     <string-array name="pref_example_list_titles">
         <item>Always</item>
@@ -76,4 +77,9 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+
+    <!-- Settings for Resizing Canvas -->
+    <string name="pref_canvas_width_default">Enter width in meters</string>
+    <string name="pref_canvas_heigth_default">Enter heigth in meters</string>
+    <string name="title_activity_canvas_size">CanvasSizeActivity</string>
 </resources>
