- Removed old SettingsActivity - ObjectsActivity is now SettingsActivity!!! - Implemented spinner dropdown menu to select control mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,11 @@
     <string name="pref_canvas_heigth_default">Enter heigth in meters</string>
     <string name="title_activity_canvas_size">CanvasSizeActivity</string>
     <string name="title_activity_checkbox">CheckboxActivity</string>
-    <string name="title_activity_objects">ObjectsActivity</string>
+    <string name="title_activity_objects">Settings</string>
+
+
+    <string-array name="modes_array">
+        <item>Trajectory</item>
+        <item>Waypoint</item>
+    </string-array>
 </resources>
