Got PreviewActivity started and added seekbars

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,5 @@
         <item>Trajectory</item>
         <item>Waypoint</item>
     </string-array>
+    <string name="title_activity_preview">Preview</string>
 </resources>
